--- a/index.html
+++ b/index.html
@@ -52,7 +52,11 @@
                         irure dolore nulla. Sunt occaecat commodo non cupidatat
                         laboris. Nulla anim consequat esse commodo irure magna.
                     </p>
-                    <h5 class="article-link" href="#">See our new menu</h5>
+                    <div class="article-link-container">
+                        <h5 class="article-link" href="#">
+                            See our new menu →
+                        </h5>
+                    </div>
                 </article>
                 <article>
                     <div class="article-title">Book a table</div>
@@ -67,7 +71,11 @@
                         nisi dolore ex cupidatat qui ullamco ut sunt proident
                         irure dolore nulla. Sunt occaecat commodo non cupidatat
                     </p>
-                    <h5 class="article-link" href="#">Book your table now</h5>
+                    <div class="article-link-container">
+                        <h5 class="article-link" href="#">
+                            Book your table now →
+                        </h5>
+                    </div>
                 </article>
                 <article>
                     <div class="article-title">Opening Hours</div>
@@ -83,7 +91,9 @@
                         commodo irure magna. Sit nisi sint fugiat sunt tempor
                         aliquip nulla. Lorem
                     </p>
-                    <h5 class="article-link" href="#">Show directions</h5>
+                    <div class="article-link-container">
+                        <h5 class="article-link" href="#">Show directions →</h5>
+                    </div>
                 </article>
             </section>
         </main>
